# charm4py

./: .gitignore  CMakeLists.txt  MANIFEST.in  libcharm_config.py.in  pyproject.toml  setup.py
charm4py/charmlib/: ccharm.pxd  charmlib_cffi.py  charmlib_cffi_build.py  charmlib_ctypes.py  charmlib_cython.pyx
cmake/: FindCharm.cmake
docs/: profiling.rst  running.rst  tutorial.rst
examples/multi-module/: README.rst
examples/particle/: README.rst
src/charm4py/: __init__.py  charm.py
src/charm4py/charmlib/: charmlib_cffi.py  charmlib_cffi_build.py  charmlib_ctypes.py  charmlib_cython.pyx
src/charm4py/charmrun/: __main__.py
src/charmrun/: start.py
tests/: auto_test.py  cleanup.py  test_config.json
tests/interactive/: run.py  test1.in
