[build-system]
requires = ["scikit-build-core", "Cython<3", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "charm4py"
dynamic = ["version"]
description = 'Charm4py Parallel Programming Framework'
keywords= ['parallel', 'parallel-programming', 'distributed', 'distributed-computing', 'hpc', 'HPC', 'runtime' ]
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    { name='Juan Galvez', email='jjgalvez@illinois.edu' },
    { name='individual contributors' },
]
classifiers=[
    'Intended Audience :: Developers',
    'License :: Free for non-commercial use',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Topic :: System :: Distributed Computing',
    'Topic :: System :: Clustering',
]

dependencies = [
  "numpy",
  "greenlet",
]

[project.scripts]
pycharmrun = "charm4py.charmrun"

[project.urls]
Homepage  = 'https://github.com/UIUC-PPL/charm4py'
Documentation = 'https://charm4py.readthedocs.io'

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/charm4py/_version.py"]
cmake.verbose = true
logging.level = "INFO"

[tool.setuptools_scm]  # Section required
write_to = "src/charm4py/_version.py"
